added e mail verification
